--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,13 +7,18 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content  refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tiempo en Almería</ion-title>
     </ion-toolbar>
   </ion-header>
 
- 
-  <app-weather [localizacion]="localizacion">
+
+  <app-weather [localizacion]="localizacion" [actualizarPrediccion]="actualizarPrediccion.asObservable()">
   </app-weather>
 </ion-content>
